--- a/homepage/index.html
+++ b/homepage/index.html
@@ -505,132 +505,14 @@ h2 {
 }
 
 </style>
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-3855518-1', 'auto');
-ga('require', 'displayfeatures');
-ga('require', 'GTM-WJ88MZ5');
-ga('send', 'pageview');
-</script>
+<script type="text/javascript" src="js/minfied_js_1.js" ></script>
 
-<script type="text/javascript">
-var k42 = false;
-var googletag = googletag || {}; googletag.cmd = googletag.cmd || [];
-
-k42 = true;
-googletag.cmd.push(function() { googletag.pubads().setTargeting("page_section",(function () {
-    var folder = location.pathname;
-    folder = folder.replace("/", "");
-    folder = folder.substr(0, folder.indexOf("/"));
-    return folder;
-  })());
-});  
-(adsbygoogle=window.adsbygoogle||[]).pauseAdRequests=1;
-
-var snhb = snhb || {}; snhb.queue = snhb.queue || [];
-snhb.options = {
-               logOutputEnabled : false,
-               debugOutputEnabled: false,
-               PBJSDebugOutputEnabled: false,
-               auctionResultOutputEnabled: false,
-               allOutputEnabled: false,
-               autoStartAuction: false,
-               gdpr: {
-                     mainGeo: "us",
-                     reconsiderationAppealIntervalSeconds: 0
-                     }
-               };
-
-</script>
+<script type="text/javascript" src="js/minfied_js_2.js" ></script>
 <script src="js/sncmp_stub.min.js" type="text/javascript"></script>
-<script>
-			window.__cmp('setLogo', "//www.w3schools.com/images/w3schoolscom_gray.gif", function(result){
-	       		//snhb.console.log("Logo set");
-	    	});
-			window.__cmp('setPrivacyPolicy', "//www.w3schools.com/about/about_privacy.asp", function(result){
-	       		//snhb.console.log("Privacy policy URI set");
-	    	});
-			__cmp('forceLocale', 'en', function(result){
-	    });
-			window.__cmp('enableWelcomeBanner', null, function(result) {
-	       		//snhb.console.log("Banner mode enabled");
-			});
-			__cmp('enablePopupDismissable', null, function(result) {});
-			window.__cmp('disableBannerPrivacyPolicyButton', null, function(result) {
-	       		//snhb.console.log("Banner mode without privacy policy button enabled");
-			});
-      window.__cmp('setTranslationFiles', { path: '//www.w3schools.com/lib/', locales: ["en"] }, function(result) {});
-      __cmp('setCSS', '//www.w3schools.com/lib/cmp.css', function(result){} );
-</script>
+<script type="text/javascript" src="js/minfied_js_3.js" ></script>
 <script async type="text/javascript" src="js/snhb-w3schools.com.min.js"></script>
-<script>
-  snhb.queue.push(function(){
-
-    snhb.startAuction(["main_leaderboard", "wide_skyscraper", "bottom_medium_rectangle", "right_bottom_medium_rectangle"]);
-
-  });
-</script>
-<script type="text/javascript">
-var stickyadstatus = "";
-function fix_stickyad() {
-  document.getElementById("stickypos").style.position = "sticky";
-  var elem = document.getElementById("stickyadcontainer");
-  if (!elem) {return false;}
-  if (document.getElementById("skyscraper")) {
-    var skyWidth = Number(w3_getStyleValue(document.getElementById("skyscraper"), "width").replace("px", ""));  
-    }
-  else {
-    var skyWidth = Number(w3_getStyleValue(document.getElementById("right"), "width").replace("px", ""));  
-  }
-  elem.style.width = skyWidth + "px";
-  if (window.innerWidth <= 992) {
-    elem.style.position = "";
-    elem.style.top = stickypos + "px";
-    return false;
-  }
-  var stickypos = document.getElementById("stickypos").offsetTop;
-  var docTop = window.pageYOffset || document.documentElement.scrollTop || document.body.scrollTop;
-  var adHeight = Number(w3_getStyleValue(elem, "height").replace("px", ""));
-  if (stickyadstatus == "") {
-    if ((stickypos - docTop) < 60) {
-      elem.style.position = "fixed";
-      elem.style.top = "60px";
-      stickyadstatus = "sticky";
-      document.getElementById("stickypos").style.position = "sticky";
-
-    }
-  } else {
-    if ((docTop + 60) - stickypos < 0) {  
-      elem.style.position = "";
-      elem.style.top = stickypos + "px";
-      stickyadstatus = "";
-      document.getElementById("stickypos").style.position = "static";
-    }
-  }
-  if (stickyadstatus == "sticky") {
-    if ((docTop + adHeight + 60) > document.getElementById("footer").offsetTop) {
-      elem.style.position = "absolute";
-      elem.style.top = (document.getElementById("footer").offsetTop - adHeight) + "px";
-      document.getElementById("stickypos").style.position = "static";
-    } else {
-        elem.style.position = "fixed";
-        elem.style.top = "60px";
-        stickyadstatus = "sticky";
-        document.getElementById("stickypos").style.position = "sticky";
-    }
-  }
-}
-function w3_getStyleValue(elmnt,style) {
-  if (window.getComputedStyle) {
-    return window.getComputedStyle(elmnt,null).getPropertyValue(style);
-  } else {
-    return elmnt.currentStyle[style];
-  }
-}
-</script>
+<script type="text/javascript" src="js/minfied_js_4.js" ></script>
+<script type="text/javascript" src="js/minfied_js_5.js" ></script>
 </head>
 <body>
 <div class="w3-container top">
@@ -1563,17 +1445,7 @@ data</td>
 <div class="sidesection">
 <h4>SHARE</h4>
 <div class="w3-text-grey sharethis">
-<script>
-<!--
-try{
-loc=location.pathname;
-if (loc.toUpperCase().indexOf(".ASP")<0) loc=loc+"default.asp";
-txt='<a href="http://www.facebook.com/sharer.php?u=https://www.w3schools.com'+loc+'" target="_blank" title="Facebook"><span class="fa fa-facebook-square fa-2x"></span></a>';
-txt=txt+'<a href="https://twitter.com/home?status=Currently reading https://www.w3schools.com'+loc+'" target="_blank" title="Twitter"><span class="fa fa-twitter-square fa-2x"></span></a>';
-document.write(txt);
-} catch(e) {}
-//-->
-</script>
+<script type="text/javascript" src="js/minfied_js_6.js" ></script>
 <br><br>
 <a href="javascript:void(0);" onclick="clickFBLike()" title="Like W3Schools on Facebook">
 <span class="fa fa-thumbs-o-up fa-2x"></span></a>
@@ -1605,31 +1477,13 @@ Read More &raquo;</a>
       
       <!--<pre>sidebar_sticky, desktop: [120,600][160,600][300,600][300,250]</pre>-->
       <div id="snhb-sidebar_sticky-0"></div>
-      <script>
-          if (Number(w3_getStyleValue(document.getElementById("main"), "height").replace("px", "")) > 2200) {
-            // adspace sticky
-            if (document.getElementById("snhb-mid_content-0")) {
-              snhb.queue.push(function(){  snhb.startAuction(["sidebar_sticky", "mid_content" ]); });
-            }
-            else {
-              snhb.queue.push(function(){  snhb.startAuction(["sidebar_sticky"]); });
-            }
-          }
-          else {
-              if (document.getElementById("snhb-mid_content-0")) {
-                snhb.queue.push(function(){  snhb.startAuction(["mid_content"]); });
-              }
-          }
-      </script>  
+      <script type="text/javascript" src="js/minfied_js_7.js" ></script>  
       
     </div>
   </div>
 </div>
 
-<script>
-  window.addEventListener("scroll", fix_stickyad);
-  window.addEventListener("resize", fix_stickyad);
-</script>
+<script type="text/javascript" src="js/minfied_js_8.js" ></script>
 
 </div>
 </div>
